--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="com.easv.yuki.dicecupapp.MainActivity">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/diceView"
+        android:layout_width="220dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:scaleType="fitCenter">
+
+        <ImageView
+            android:id="@+id/dice1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/dice1" />
+
+        <ImageView
+            android:id="@+id/dice2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/dice2" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/rollDiceBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="61dp"
+        android:text="Roll Dices!"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
+
+
