--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -38,15 +38,26 @@
         android:id="@+id/clearButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="510dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="41dp"
         android:elevation="0dp"
         android:fontFamily="@font/nunito_semibold"
         android:gravity="center"
         android:orientation="horizontal"
         android:scaleType="fitCenter"
         android:text="Clear"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="54dp"
+        android:fontFamily="@font/nunito_semibold"
+        android:text="BACK"
         android:textSize="18sp" />
 
 
