--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="55dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -17,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:scaleType="fitCenter">
@@ -27,6 +27,8 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_marginRight="20dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
                 android:padding="15dp"
                 android:src="@drawable/dice1" />
 
@@ -34,6 +36,7 @@
                 android:id="@+id/dice2"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:padding="15dp"
                 android:src="@drawable/dice2" />
@@ -55,6 +58,7 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_marginRight="20dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:padding="15dp"
                 app:srcCompat="@drawable/dice3" />
@@ -63,6 +67,7 @@
                 android:id="@+id/dice4"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:padding="15dp"
                 app:srcCompat="@drawable/dice4" />
@@ -83,6 +88,7 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_marginRight="20dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:padding="15dp"
                 app:srcCompat="@drawable/dice5" />
@@ -91,6 +97,7 @@
                 android:id="@+id/dice6"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:padding="15dp"
                 app:srcCompat="@drawable/dice6" />
@@ -114,8 +121,11 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
+                android:background="@drawable/roll_button_background"
+                android:fontFamily="@font/nunito_semibold"
                 android:text="Roll Dices!"
                 android:textAlignment="center"
+                android:textColor="@android:color/white"
                 android:textSize="24sp" />
 
             <Button
@@ -129,6 +139,25 @@
 
         </LinearLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:gravity="right"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/closeButton"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            app:srcCompat="@drawable/cross" />
     </LinearLayout>
 
 
